Fix layout bug when role items are a different height
The addition of `flex: 1;` to the item body class means this will
expand to fill the available space. This requires a "column" based
flex layout on the containing `provisioned-role-item` class.

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -516,6 +516,8 @@ a.copy-text--button__small {
 .provisioned-role-item {
     border: solid 1px #ddd;
     border-radius: 2px;
+    display: flex;
+    flex-direction: column;
 }
 
 .provisioned-role-item-header {
@@ -526,6 +528,7 @@ a.copy-text--button__small {
 
 .provisioned-role-item-body {
     padding: 10px;
+    flex: 1;
 }
 
 .provisioned-role-item-entry {
